# Nano-LLM

./: .gitignore  CMakeLists.txt  README.md
include/: ops.h  tensor.h
src/: main.cpp  ops_cpu.cpp  ops_cuda.cu  tensor.cpp
